[package]
name = "pvz_bevy"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.13"
rand = "0.8"
# Explicitly depend on getrandom 0.3 to enable wasm_js feature
getrandom = { version = "0.3", features = ["wasm_js"] }
# UUID needs js feature
uuid = { version = "1.0", features = ["v4", "js"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
